Fix re-sizing of auto-links on Safari for iPad

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,7 +302,8 @@ h4 {
   text-align: center;
 }
 
-#footer address p {
+#footer address p,
+#footer address a {
   font-size: 0.85rem;
   -webkit-text-size-adjust: 100%;
 }
